--- a/04 - Array Cardio Day 1/index-FINISHED.html
+++ b/04 - Array Cardio Day 1/index-FINISHED.html
@@ -7,6 +7,8 @@
 </head>
 <body>
   <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
+  
+  <p id="text" ></p>
   <script>
     // Get your shorts on - this is an array workout!
     // ## Array Cardio Day 1
@@ -41,6 +43,7 @@
     const fifteen = inventors.filter(inventor => (inventor.year >= 1500 && inventor.year < 1600));
 
     console.table(fifteen);
+    
 
     // Array.prototype.map()
     // 2. Give us an array of the inventor first and last names
@@ -63,7 +66,7 @@
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live?
     const totalYears = inventors.reduce((total, inventor) => {
-      return total + (inventor.passed - inventor.year);
+      return total += (inventor.passed - inventor.year);
     }, 0);
 
     console.log(totalYears);
@@ -73,7 +76,7 @@
       const lastInventor = a.passed - a.year;
       const nextInventor = b.passed - b.year;
       return lastInventor > nextInventor ? -1 : 1;
-    });
+    },);
     console.table(oldest);
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
